--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-hook/window-size": "^3.1.1",
     "axios": "^1.8.4",
+    "env": "^0.0.2",
     "framer-motion": "^12.10.0",
     "jsdf": "^0.3.2",
     "jspdf": "^3.0.1",
