--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
+    "maplibre-gl": "^5.6.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.48",
     "papaparse": "^5.5.2",
