--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "env": "^0.0.2",
     "framer-motion": "^12.10.0",
+    "html2pdf.js": "^0.10.3",
     "jsdf": "^0.3.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
