--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-hook/window-size": "^3.1.1",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "env": "^0.0.2",
     "framer-motion": "^12.10.0",
     "html2pdf.js": "^0.10.3",
@@ -30,6 +31,7 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
